# single-instance

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  appyeyor.yml
examples/: example.rs  multi_instance_server.rs
src/: error.rs  lib.rs
