[package]
name = "single-instance"
version = "0.3.1"
authors = ["wlbf <lbf1353@live.com>"]
license = "MIT"
description = "A rust library for single instance application."
repository = "https://github.com/WLBF/single-instance"
readme = "README.md"
keywords = ["single", "singleton"]
include = [
    "src/*.rs",
    "Cargo.toml",
]

[dependencies]
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
widestring = "0.4.3"
winapi = { version = "0.3", features = ["synchapi", "winnt", "errhandlingapi", "winerror", "handleapi"] }

[target.'cfg(unix)'.dependencies]
nix = "0.22"
